--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "webpack-cli": "^4.9.2"
   },
   "dependencies": {
+    "@xstate/react": "^3.0.0",
     "axios": "^0.27.2",
     "electron-is-dev": "^2.0.0",
     "electron-log": "^4.4.7",
@@ -57,7 +58,8 @@
     "react-dom": "^18.1.0",
     "regedit": "^5.1.1",
     "semver": "^7.3.7",
-    "sudo-prompt": "^9.2.1"
+    "sudo-prompt": "^9.2.1",
+    "xstate": "^4.32.1"
   },
   "author": "lecepin",
   "license": "ISC",
